tests/contract_testcases/polkadot/primitives/units_02.sol

        contract c {
            function test() public {
                int32 x = (1 + 2) days;
            }
        }
// ---- Expect: diagnostics ----
// error: 4:35-39: unrecognised token 'days', expected "!=", "%", "%=", "&", "&&", "&=", "*", "**", "*=", "+", "++", "+=", "-", "--", "-=", ".", "/", "/=", ";", "<", "<<", "<<=", "<=", "=", "==", ">", ">=", ">>", ">>=", "?", "[", "^", "^=", "|", "|=", "||"
